# osint-scraper/internal/api/instagram/service.go
@@ -1,0 +1,26 @@
+package instagram
+
+import (
+    "net/http"
+    "time"
+)
+
+type Service struct{}
+
+func NewService() *Service {
+    return &Service{}
+}
+
+func (s *Service) CheckWebsite() bool {
+    client := http.Client{
+        Timeout: 9 * time.Second,
+    }
+
+    resp, err := client.Get("https://www.instagram.com")
+    if err != nil {
+        return false
+    }
+    defer resp.Body.Close()
+
+    return resp.StatusCode == 200
+}
