# osint-scraper/internal/api/twitter/routes.go
@@ -1,0 +1,10 @@
+package twitter
+
+import "github.com/gin-gonic/gin"
+
+func RegisterRoutes(rg *gin.RouterGroup, svc *Service) {
+
+    h := NewHandler(svc)
+
+    rg.GET("/ping", h.Ping)
+}
